syntax = "proto3";

package io.openliberty.sample;
option java_multiple_files = true;

service SampleService {
    // server streaming
    rpc getServerStreamingGreeting (GreetingRequest) returns (stream GreetingResponse) {}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}
